8204929: Fonts with embedded bitmaps are not always rotated

Reviewed-by: bae